# RustyRaft

./: Cargo.toml  README.md
examples/: hashmap.rs
src/: client.rs  connection.rs  lib.rs  messages.rs  raft.rs  server.rs  state.rs
src/log/: mem.rs  mod.rs
src/net/: codec.rs  mod.rs  node.rs
